--- a/books.html
+++ b/books.html
@@ -1,5 +1,4 @@
 <!-- Books Section Design -->
-
 <link rel="stylesheet" href="styles.css">
 <!-- Boxicons -->
 <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -79,3 +78,5 @@
         </div>
     </div>
 </section>
+
+<script src="script.js"></script>
